--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,10 @@ div{
     margin: 0;
     padding: 0;
 }
+video{
+    width: 700px; 
+    margin: 10px;
+}
 body{
     background-color:azure;
     background-image: url('../images/my-site-images/masaaki-komori-7xP5BJ34ybg-unsplash.jpg');
@@ -104,14 +108,27 @@ p{
     margin: auto;
     padding-bottom: 20px;
 }
+.skills{
+    display: flex;
+}
 .skill-row{
-    width: 50%;
-    margin: 100px auto ; /*because we specfied the width of this class, the alignment of it was back to default -left-. to return it to center, set the top-bottom margein to the value you want, and set the left-right margins to auto*/
+    /* border:solid 1px white; */
+    margin: 10px; /*because we specfied the width of this class, the alignment of it was back to default -left-. to return it to center, set the top-bottom margein to the value you want, and set the left-right margins to auto*/
     text-align: left;
+
+}
+.skill-row:hover{
+    
+    background-color: white;
+    border-radius: 10%;
 }
 /* .sw{
     color: white;
 } */
+.project-img{
+    width: 200px;
+    height: 100px;
+}
 table{
     width: 60%;
     margin-left: auto;
@@ -159,6 +176,13 @@ td{
     padding-bottom: 50px;
     margin: 50px;
     background-color: white;
+}
+.project-div{
+    padding: 50px;
+    margin: 50px;
+    background-color: #1e484a;
+    color: white;
+
 }
 .img{
     width: 25%;
@@ -276,7 +300,18 @@ td{
     color: white;
     transform: rotateY(180deg);
   }
-@media screen and (max-width: 700px){
+@media screen and (max-width: 900px){
+    h1{
+        font-size: 50px;
+    }
+    table{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    video{
+        width: 100%;
+    }
     hr{
         border-style: none;
         border-top-style: dotted;
@@ -293,13 +328,21 @@ td{
         margin:auto;
         margin-bottom: 30px;
     }
-    .skill-row{
-        width: 100%;
-        margin: 100px auto ; /*because we specfied the width of this class, the alignment of it was back to default -left-. to return it to center, set the top-bottom margein to the value you want, and set the left-right margins to auto*/
-        text-align: left;
-        margin-top: 10px;
-
+    .project-img{
+        width: 50%;
+        height: 50%;
     }
+    .profile-img:hover{
+        width: 100%;
+    }
+    .project-div{
+        padding: 20px;
+        margin: 10px;
+        width: 100%;
+        background-color: #1e484a;
+        color: white;
+    }
+    
     .interest-row{
         width: 100%;
     }
@@ -331,4 +374,9 @@ td{
         width: 100%;
         margin-left: 30px;
     }    
+    .contact-div{
+        padding-top: 50px;
+        padding-bottom: 50px;
+        background-color: white;
+    }
 }
