--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -385,6 +385,12 @@ td {
         flex-wrap: wrap;
         /* flex-direction: column; */
     }
+    .exp {
+        margin: 10px;
+        padding: 10px;
+        margin-top: 50px;
+        font-size: 15px;
+    }
     .skill-row {
         display: flex;
         flex-direction: column;
@@ -489,6 +495,8 @@ td {
     .contact-div {
         padding-top: 50px;
         padding-bottom: 50px;
+        margin: 10px auto;
+        width: 90%;
         background-color: white;
     }
 }
